2007-06-29  Pedro Alves  <pedro_alves@portugalmail.pt>

	* PipeDev/PipeDevice.cpp : Move ...
	* PipeDev.cpp : ... here.  Include PipeDev.h instead of PipeDevice.h.
	* PipeDev/PipeDevice.h : Move ...
	* PipeDev.h : ... here.
	* PipeDev/Makefile : Move ...
	* Makefile : ... here.
	(PipeDev_unstripped.dll): Depend on PipeDev.cpp and PipeDev.h.

2007-06-28  Pedro Alves  <pedro_alves@portugalmail.pt>

	* PipeDev/PipeDevice.cpp (RecursiveCS): New implementation.
	(LockGuard): Better split the DEBUG_LOCKS version.
	(LockGuard::LockGuard) [DEBUG_LOCKS]: Prepend a "+" to the log output.

2007-06-28  Pedro Alves  <pedro_alves@portugalmail.pt>

	* PipeDev/PipeDevice.cpp (FastCS): Delete.

2007-06-28  Pedro Alves  <pedro_alves@portugalmail.pt>

	* PipeDev/PipeDevice.cpp (LogMessage2, LogMessage, LogScope)
	(LOG, LOGSCOPE): Move higher up in the file.
	(PipeDeviceContext::DeviceTag): New field.
	(PipeDeviceContext::TotalWritten, PipeDeviceContext::TotalRead)
	[DEBUG_MODE]: New fields.
	(PipeDeviceContext::~PipeDeviceContext): Free DeviceTag.
	(PipeDeviceContext::writeBytes(const void*, DWORD)): Change signature
	to ...
	(PipeDeviceContext::writeBytes(const BYTE*, DWORD)): ... this.
	Correct buffer wrapping.  Add written bytes to TotalWritten.
	(PipeDeviceContext::readBytes(void*, DWORD)): Change signature
	to ...
	(PipeDeviceContext::readBytes(BYTE*, DWORD)): ... this.
	Correct buffer wrapping.  Add read bytes to TotalRead.
	(LogThread) [DEBUG_MODE]: New function.
	(Init) [DEBUG_MODE]: Create a LogThread thread.  Also set the
	AbortEvent event when OpenCount is 0.
	(Read(PipeOpenContext*, LPVOID, DWORD)): Change signature to ...
	(Read(PipeOpenContext*, BYTE*, DWORD)): ... this.  Swap order of the
	wait events in the wait event array, so AbortEvent has priority.
	(Write(PipeOpenContext*, LPCVOID, DWORD)): Change signature to ...
	(Write(PipeOpenContext*, const BYTE*, DWORD)): ... this.  Swap order
	of the wait events in the wait event array, so AbortEvent has priority.